--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ What are you doing here?! you sneaky developer...
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Vinod Jangid | Portfolio" />
   <meta name="twitter:description"
-  content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+  content="Hi! My name is Jogendra I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <title>Jogendra Jangid | Portfolio</title>
   <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
   <!-- aos cdn -->
