--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ What are you doing here?! you sneaky developer...
   <meta property="og:description"
     content="Hi! My name is Jogendra. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
-  <meta property="og:url" content="https://Jogendra.site" />
+  <meta property="og:url" content="https://www.vinodjangid.site/" />
   <meta property="og:site_name" content="Vinod Jangid Portfolio" />
 
   <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
